after 59s user auto deleted done

--- a/.env
+++ b/.env
@@ -18,13 +18,6 @@ SUPER_ADMIN_ROLE=superAdmin
 SUPER_ADMIN_BRANCH=superAdmin-123
 SUPER_ADMIN_IMAGE=https://i.ibb.co/HDcPV0s/super-Admin.jpg
 RESET_PASS_UI_LINK=http://localhost:5173/reset-password
-
-bkash_username = 'sandboxTokenizedUser02'
-bkash_password = 'sandboxTokenizedUser02@12345'
-bkash_api_key = '4f6o0cjiki2rfm34kfdadl1eqq'
-bkash_secret_key = '2is7hdktrekvrbljjh44ll3d9l1dtjo4pasmjvs5vl5qr3fug4b'
-
-bkash_grant_token_url = https://tokenized.sandbox.bka.sh/v1.2.0-beta/tokenized/checkout/token/grant
-bkash_create_payment_url =  https://tokenized.sandbox.bka.sh/v1.2.0-beta/tokenized/checkout/create
-bkash_execute_payment_url = https://tokenized.sandbox.bka.sh/v1.2.0-beta/tokenized/checkout/execute
-bkash_refund_transaction_url = https://tokenized.sandbox.bka.sh/v1.2.0-beta/tokenized/checkout/payment/refund
+EMAIL_USER_VERIFICATION=sobujapm87@gmail.com
+APP_PASSWORD="mymo dvqa hwin htfj"
+SENDER_EMAIL="saifulislamweb87@gmail.com"
